# RM

./: .gitignore  CMakeLists.txt  README.md  gen_bitmap.sh  gen_dataset.py  realdata-format.py
eva_scripts/: analyse_RQ.py  analyse_sensitivity.py  exp1_space.py  exp2_tuning.py  run_RQ.py
eva_scripts/gnuplot_scripts/: latency_vs_query_range.gnuplot  throughput_vs_UDI.gnuplot  throughput_vs_cardinality.gnuplot  throughput_vs_query_range.gnuplot  throughput_vs_query_range_1B.gnuplot
src/GTest/: CMakeLists.txt  perf.cpp  perf.h  test_rabit.cpp
src/bitmaps/: base_table.h
src/bitmaps/cubit/: test.cpp
src/bitmaps/naive/: table.cpp
src/bitmaps/rabit/: segBtv.cpp  segBtv.h  table.cpp  table.h  test.cpp
src/bitmaps/ucb/: table.cpp
src/fastbit/: bitvector.cpp  bitvector.h  bitvector16.cpp  bitvector16.h  bitvector8.cpp  bitvector8.h  bitvector_base.h
src/nicolas/: gen_bitmap.cpp  gen_bitmap.h  nicolas.cpp  util.cpp  util.h
